# fastapi_service

./: .gitignore  Dockerfile  database.py  main.py  pyproject.toml  routers.py  schemas.py
